--- a/styles.css
+++ b/styles.css
@@ -118,3 +118,50 @@ main navbar
 		text-align: center;
 	}
 }
+
+/* 
+=================
+Hero
+=================
+*/
+
+.hero-header {
+	min-height: 100vh;
+	/* on smaller screen instead of background there should be plain background color */
+	background: var(--primaryColor);
+	color: var(--mainWhite);
+	/* now by doing this banner itself will positioned in center but its content is not.. 
+  If You want to center the text , user text-align property*/
+	display: grid;
+	justify-content: center;
+	align-items: center;
+}
+
+.hero-banner {
+	text-align: center;
+}
+.hero-banner p {
+	font-size: 1rem;
+	width: 80%;
+	max-width: 560px;
+}
+
+@media screen and (max-width: 600px) {
+	.hero-banner {
+		padding: 0 3rem;
+	}
+}
+
+@media screen and (min-width: 768px) {
+	.hero-header {
+		background: linear-gradient(to bottom, rgba(241, 80, 37, 0.75), rgba(0, 0, 0, .75)),
+			url('./images/image-2.jpeg');
+		background-position: center;
+		background-size: cover;
+		background-repeat: no-repeat;
+		background-attachment: fixed;
+	}
+	.hero-banner {
+		padding: 0 3rem;
+	}
+}
